--- a/devops/dev/Dockerfile
+++ b/devops/dev/Dockerfile
@@ -1,8 +1,7 @@
 FROM node:22.14.0
 WORKDIR /app
-ARG CACHEBUST date
 COPY ./package.json ./yarn.lock ./
-RUN yarn install --silent
+RUN yarn install
 COPY . .
-RUN yarn build
+EXPOSE 4000
 CMD ["yarn", "start"]
