--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "minio": "^8.0.5",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.5",
+    "otplib": "^12.0.1",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
