--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -14,22 +14,11 @@ jobs:
 
       - name: Generate GitHub App token
         id: generate_token
-        uses: actions/github-script@v7
+        uses: tibdex/github-app-token@v2
         with:
-          script: |
-            const { App } = require("@octokit/app");
-            const app = new App({
-              appId: process.env.GH_APP_ID,
-              privateKey: process.env.GH_APP_PRIVATE_KEY,
-            });
-            const token = await app.getInstallationAccessToken({
-              installationId: process.env.GH_INSTALLATION_ID,
-            });
-            core.setOutput("token", token);
-        env:
-          GH_APP_ID: ${{ secrets.GH_APP_ID }}
-          GH_INSTALLATION_ID: ${{ secrets.GH_INSTALLATION_ID }}
-          GH_APP_PRIVATE_KEY: ${{ secrets.GH_APP_PRIVATE_KEY }}
+          app_id: ${{ secrets.GH_APP_ID }}
+          private_key: ${{ secrets.GH_APP_PRIVATE_KEY }}
+          installation_id: ${{ secrets.GH_INSTALLATION_ID }}
 
       - name: Add SSH Key
         uses: shimataro/ssh-key-action@v2
