--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -42,6 +42,7 @@ jobs:
             echo 'POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}' >> .env &&
             echo 'POSTGRES_SSL=${{ secrets.POSTGRES_SSL }}' >> .env &&
             echo 'MINIO_URL=${{ secrets.MINIO_URL }}' >> .env &&
+            echo 'MINIO_PUBLIC_URL=${{ secrets.MINIO_PUBLIC_URL }}' >> .env &&
             echo 'MINIO_PORT=${{ secrets.MINIO_PORT }}' >> .env &&
             echo 'MINIO_ACCESS_KEY=${{ secrets.MINIO_ACCESS_KEY }}' >> .env &&
             echo 'MINIO_BUCKET=${{ secrets.MINIO_BUCKET }}' >> .env &&
