--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    extra_hosts:
+      - "minio.perfumesdelpuro.com:172.17.0.1"
     environment:
       NODE_ENV: ${NODE_ENV:-development}
       APP_PORT: ${APP_PORT:-4000}
