--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,8 +1,8 @@
 services:
-  perfumery_api:
+  perfumery_api-dev:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     extra_hosts:
       - "minio.perfumesdelpuro.com:172.17.0.1"
     environment:
