--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -55,6 +55,7 @@ jobs:
             echo 'EMAIL_PASS=${{ secrets.EMAIL_PASS }}' >> .env &&
             echo 'OTP_SECRET=${{ secrets.OTP_SECRET }}' >> .env &&
             echo 'EMAIL_FROM=${{ secrets.EMAIL_FROM }}' >> .env &&
+            git checkout dev &&
             git pull origin dev &&
             docker-compose -f docker-compose.dev.yml pull &&
             docker-compose -f docker-compose.dev.yml build --no-cache &&
