--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20",
+    "typeorm": "0.3.26",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
