--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -46,6 +46,7 @@ jobs:
             echo 'MINIO_PUBLIC_URL=${{ secrets.MINIO_PUBLIC_URL }}' >> .env &&
             echo 'MINIO_PORT=${{ secrets.MINIO_PORT }}' >> .env &&
             echo 'MINIO_ACCESS_KEY=${{ secrets.MINIO_ACCESS_KEY }}' >> .env &&
+            echo 'MINIO_SECRET_KEY=${{ secrets.MINIO_SECRET_KEY }}' >> .env &&
             echo 'MINIO_BUCKET=${{ secrets.MINIO_BUCKET }}' >> .env &&
             echo 'SECRET_KEY=${{ secrets.SECRET_KEY }}' >> .env &&
             echo 'EMAIL_HOST=${{ secrets.EMAIL_HOST }}' >> .env &&
