--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "google-auth-library": "^10.5.0",
     "handlebars": "^4.7.8",
     "minio": "^8.0.5",
     "multer": "^1.4.5-lts.2",
